add pages 'about', 'blog'

--- a/.build/blog.html
+++ b/.build/blog.html
@@ -2,36 +2,53 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Добро пожаловать</title>
+    <title>Блог</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
   </head>
   <body>
-    <div class="main-block">
-      <div class="main-block__img">   </div>
-      <h1 class="main-block__title">Мария Молчанова</h1>
-      <div class="main-block__text">Личный сайт веб разработчика</div>
-      <div class="main-block-socials socials">
+    <div class="header">
+      <div class="socials">
         <div class="socials__ico"></div>
         <div class="socials__ico"></div>
         <div class="socials__ico"></div>
       </div>
-      <nav class="nav-block">
-        <ul class="nav-block__list">
-          <li class="nav-block__item">Мои работы</li>
-          <li class="nav-block__item">Обо мне</li>
-          <li class="nav-block__item">Блог</li>
-        </ul>
-      </nav>
+      <div class="general-block">
+        <div class="general-block__img"></div>
+        <h1 class="general-block__title title">Блог</h1>
+        <div class="general-block__description">Статьи, которые я написал</div>
+      </div>
+      <div class="hamburger"></div>
     </div>
-    <div class="copyright">
-      <ul class="copyright__list">
-        <li class="copyright__item">Мария Молчанова</li>
-        <li class="copyright__item">создано с любовью в LoftSchool</li>
-        <li class="copyright__item">2018</li>
-      </ul>
+    <div class="container">
+      <div class="content blog">
+        <ul class="blog__list">
+          <li class="blog__item">
+            <div class="blog__title">Самое важное в SASS</div>
+            <div class="blog__data">22 ноября 2016</div>
+            <div class="blog__desc">
+              <div class="blog__desc-text">
+                <p>Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.</p>
+                <p>Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.</p>
+              </div>
+              <div class="blog__desc-snippet"></div>
+            </div>
+          </li>
+          <li class="blog__item">
+            <div class="blog__title">Приёмы в вёрстке, без которых не обходится ни один сайт</div>
+            <div class="blog__data">13 ноября 2016</div>
+            <div class="blog__desc">
+              <div class="blog__desc-text">
+                <p>Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.</p>
+                <p>Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.</p>
+              </div>
+              <div class="blog__desc-snippet"></div>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
